Remove the TouchStationary state from PlatformTouchPoint.

This is being tracked upstream at webkit.org in https://bugs.webkit.org/show_bug.cgi?id=37609

Change-Id: Ideb26d7457e27799564e8db9b3308a703a1110e2