WebCore/platform/PlatformTouchPoint.h
@@ -40,7 +40,6 @@ public:
         TouchReleased,
         TouchPressed,
         TouchMoved,
-        TouchStationary,
         TouchCancelled
     };
 
